--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -37,9 +37,8 @@
 	"Are you sure you want your account to be deleted?": "Bist du sicher, dass du dein Konto löschen möchtest?",
 	"Cancel": "Abbrechen",
 	"Delete": "Löschen",
-	"Datenschutzerklärung": "Datenschutzerklärung",
-	"Impressum": "Impressum",
-	"Cookie-Richtlinie": "Cookie-Richtlinie",
+	"Privacy policy": "Datenschutzrichtlinie",
+	"Imprint": "Impressum",
 	"Upload": "Hochladen",
 	"Movie Name": "Filmtitel",
 	"Description Short": "Kurzbeschreibung",
@@ -65,12 +64,16 @@
 	"Please wait until the upload is finished": "Bitte warte, bis der Upload abgeschlossen ist",
 	"Genre": "Genre",
 	"Save change": "Änderungen speichern",
+	"back": "Zurück",
 	"My Uploads": "Meine Uploads",
 	"Created at": "Erstellt am",
 	"Edit": "Bearbeiten",
 	"Delete file": "Datei löschen",
 	"Would you like to delete": "Möchtest du löschen",
 	"?": "?",
+	"Please take a moment to review our": "Bitte nehmen Sie sich einen Moment Zeit, um unsere",
+	"privacy policy": "Datenschutzbestimmungen",
+	"before proceeding. Thank you!": "bevor Sie fortfahren. Ich danke Ihnen!",
 	"My Movies": "Meine Filme",
 	"New movie": "Neuer Film",
 	"Movie": "Film",
@@ -116,7 +119,6 @@
 	"Please enter a valid email address": "Bitte gib eine gültige E-Mail-Adresse ein",
 	"Email is": "E-Mail ist",
 	"required": "erforderlich",
-	"back": "Zurück",
 	"2. STEP": "2. SCHRITT",
 	"Create an account to continue": "Erstelle ein Konto, um fortzufahren",
 	"You can log in to Videoflix with this combination of e-mail address and password.": "Du kannst dich bei Videoflix mit dieser Kombination aus E-Mail-Adresse und Passwort anmelden.",
@@ -128,7 +130,6 @@
 	"Enter your password again": "Gib dein Passwort erneut ein",
 	"Use at least eight characters (case sensitive) with at least one number and one special character. one special character.": "Verwende mindestens acht Zeichen (Groß- und Kleinschreibung beachten) mit mindestens einer Zahl und einem Sonderzeichen.",
 	"Videoflix uses your data to personalise and customise your Videoflix experience. to improve it. You can change your change your communication settings at any time. We may use your data as described in our": "Videoflix verwendet deine Daten, um deine Videoflix-Erfahrung zu personalisieren und anzupassen, um sie zu verbessern. Du kannst deine Kommunikationseinstellungen jederzeit ändern. Wir können deine Daten gemäß unserer",
-	"Privacy policy": "Datenschutzrichtlinie",
 	"as described above. By clicking on \"Continue\", confirm that you accept our": "wie oben beschrieben verwenden. Durch Klicken auf \"Weiter\" bestätigst du, dass du unsere",
 	"and": "und",
 	"Cookie Policy": "Cookie-Richtlinie",
