--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -37,9 +37,8 @@
 	"Are you sure you want your account to be deleted?": "Are you sure you want your account to be deleted?",
 	"Cancel": "Cancel",
 	"Delete": "Delete",
-	"Datenschutzerklärung": "Datenschutzerklärung",
-	"Impressum": "Impressum",
-	"Cookie-Richtlinie": "Cookie-Richtlinie",
+	"Privacy policy": "Privacy policy",
+	"Imprint": "Imprint",
 	"Upload": "Upload",
 	"Movie Name": "Movie Name",
 	"Description Short": "Description Short",
@@ -65,12 +64,16 @@
 	"Please wait until the upload is finished": "Please wait until the upload is finished",
 	"Genre": "Genre",
 	"Save change": "Save change",
+	"back": "back",
 	"My Uploads": "My Uploads",
 	"Created at": "Created at",
 	"Edit": "Edit",
 	"Delete file": "Delete file",
 	"Would you like to delete": "Would you like to delete",
 	"?": "?",
+	"Please take a moment to review our": "Please take a moment to review our",
+	"privacy policy": "privacy policy",
+	"before proceeding. Thank you!": "before proceeding. Thank you!",
 	"My Movies": "My Movies",
 	"New movie": "New movie",
 	"Movie": "Movie",
@@ -116,7 +119,6 @@
 	"Please enter a valid email address": "Please enter a valid email address",
 	"Email is": "Email is",
 	"required": "required",
-	"back": "back",
 	"2. STEP": "2. STEP",
 	"Create an account to continue": "Create an account to continue",
 	"You can log in to Videoflix with this combination of e-mail address and password.": "You can log in to Videoflix with this combination of e-mail address and password.",
@@ -128,7 +130,6 @@
 	"Enter your password again": "Enter your password again",
 	"Use at least eight characters (case sensitive) with at least one number and one special character. one special character.": "Use at least eight characters (case sensitive) with at least one number and one special character. one special character.",
 	"Videoflix uses your data to personalise and customise your Videoflix experience. to improve it. You can change your change your communication settings at any time. We may use your data as described in our": "Videoflix uses your data to personalise and customise your Videoflix experience. to improve it. You can change your change your communication settings at any time. We may use your data as described in our",
-	"Privacy policy": "Privacy policy",
 	"as described above. By clicking on \"Continue\", confirm that you accept our": "as described above. By clicking on \"Continue\", confirm that you accept our",
 	"and": "and",
 	"Cookie Policy": "Cookie Policy",
