authentication and error handling

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -18,12 +18,14 @@
 	"Language": "Sprache",
 	"German": "Deutsch",
 	"English": "Englisch",
+	"Age rating": "Altersfreigabe",
 	"None Age rating": "Keine Altersfreigabe",
 	"Age rating from 6": "Altersfreigabe ab 6",
 	"Age rating from 12": "Altersfreigabe ab 12",
 	"Age rating from 16": "Altersfreigabe ab 16",
 	"Profile image": "Profilbild",
 	"Image": "Bild",
+	"No file uploaded yet.": "Es wurde noch keine Datei hochgeladen.",
 	"Close": "Schließen",
 	"Save": "Speichern",
 	"Edit account information": "Kontoinformationen bearbeiten",
@@ -53,7 +55,6 @@
 	"Funny": "Komödie",
 	"Knowledge": "Wissen",
 	"Other": "Sonstige",
-	"Age rating": "Altersfreigabe",
 	"No age rating": "Keine Altersfreigabe",
 	"Video / Files": "Video / Dateien",
 	"(Please fill in all fields above first)": "(Bitte fülle zuerst alle oben stehenden Felder aus)",
@@ -109,8 +110,10 @@
 	"Family-friendly content thanks to easy-to-use parental controls.": "Familienfreundliche Inhalte dank leicht bedienbarer elterlicher Kontrollen.",
 	"My watchlist": "Meine Merkliste",
 	"Author:": "Autor:",
+	"Convert running": "Laufend umwandeln",
+	"At the moment the conversion of the video is still running in the background. Please be patient and check back later": "Im Moment läuft die Konvertierung des Videos noch im Hintergrund. Bitte haben Sie Geduld und schauen Sie später wieder vorbei.",
 	"Search movie": "Film suchen",
-	"Please enter a search term.": "Bitte gib einen Suchbegriff ein.",
+	"Please enter the desired title above.": "Umwandlung noch im Gange",
 	"Nothing found.": "Nichts gefunden.",
 	"My Movie": "Mein Film",
 	"Reset password": "Passwort zurücksetzen",
@@ -131,8 +134,6 @@
 	"Use at least eight characters (case sensitive) with at least one number and one special character. one special character.": "Verwende mindestens acht Zeichen (Groß- und Kleinschreibung beachten) mit mindestens einer Zahl und einem Sonderzeichen.",
 	"Videoflix uses your data to personalise and customise your Videoflix experience. to improve it. You can change your change your communication settings at any time. We may use your data as described in our": "Videoflix verwendet deine Daten, um deine Videoflix-Erfahrung zu personalisieren und anzupassen, um sie zu verbessern. Du kannst deine Kommunikationseinstellungen jederzeit ändern. Wir können deine Daten gemäß unserer",
 	"as described above. By clicking on \"Continue\", confirm that you accept our": "wie oben beschrieben verwenden. Durch Klicken auf \"Weiter\" bestätigst du, dass du unsere",
-	"and": "und",
-	"Cookie Policy": "Cookie-Richtlinie",
 	"have read.": "gelesen hast.",
 	"Next": "Weiter",
 	"1. STEP": "1. SCHRITT",
