--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,12 +18,14 @@
 	"Language": "Language",
 	"German": "German",
 	"English": "English",
+	"Age rating": "Age rating",
 	"None Age rating": "None Age rating",
 	"Age rating from 6": "Age rating from 6",
 	"Age rating from 12": "Age rating from 12",
 	"Age rating from 16": "Age rating from 16",
 	"Profile image": "Profile image",
 	"Image": "Image",
+	"No file uploaded yet.": "No file uploaded yet.",
 	"Close": "Close",
 	"Save": "Save",
 	"Edit account information": "Edit account information",
@@ -53,7 +55,6 @@
 	"Funny": "Funny",
 	"Knowledge": "Knowledge",
 	"Other": "Other",
-	"Age rating": "Age rating",
 	"No age rating": "No age rating",
 	"Video / Files": "Video / Files",
 	"(Please fill in all fields above first)": "(Please fill in all fields above first)",
@@ -109,8 +110,10 @@
 	"Family-friendly content thanks to easy-to-use parental controls.": "Family-friendly content thanks to easy-to-use parental controls.",
 	"My watchlist": "My watchlist",
 	"Author:": "Author:",
+	"Convert running": "Convert running",
+	"At the moment the conversion of the video is still running in the background. Please be patient and check back later": "At the moment the conversion of the video is still running in the background. Please be patient and check back later",
 	"Search movie": "Search movie",
-	"Please enter a search term.": "Please enter a search term.",
+	"Please enter the desired title above.": "Please enter the desired title above.",
 	"Nothing found.": "Nothing found.",
 	"My Movie": "My Movie",
 	"Reset password": "Reset password",
@@ -131,8 +134,6 @@
 	"Use at least eight characters (case sensitive) with at least one number and one special character. one special character.": "Use at least eight characters (case sensitive) with at least one number and one special character. one special character.",
 	"Videoflix uses your data to personalise and customise your Videoflix experience. to improve it. You can change your change your communication settings at any time. We may use your data as described in our": "Videoflix uses your data to personalise and customise your Videoflix experience. to improve it. You can change your change your communication settings at any time. We may use your data as described in our",
 	"as described above. By clicking on \"Continue\", confirm that you accept our": "as described above. By clicking on \"Continue\", confirm that you accept our",
-	"and": "and",
-	"Cookie Policy": "Cookie Policy",
 	"have read.": "have read.",
 	"Next": "Next",
 	"1. STEP": "1. STEP",
