--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -84,6 +84,7 @@
 	"LOGIN": "ANMELDEN",
 	"Enjoy brand new originals, blockbusters, addictive series and much more more in streaming": "Genieße brandneue Originale, Blockbuster, süchtig machende Serien und vieles mehr im Streaming",
 	"To fully explore the variety of Videoflix or to start again, please enter your e-mail address.": "Um die Vielfalt von Videoflix vollständig zu erkunden oder neu zu starten, gib bitte deine E-Mail-Adresse ein.",
+	"Your Email is already registered. Please use": "Ihre E-Mail ist bereits registriert. Bitte verwenden Sie diese",
 	"Register now": "Jetzt registrieren",
 	"Guest Login": "Gast-Anmeldung",
 	"Seize this great opportunity today and secure our exclusive free offer now. exclusive free offer now.": "Nutze heute diese großartige Gelegenheit und sichere dir unser exklusives kostenloses Angebot jetzt.",
@@ -139,10 +140,16 @@
 	"1. STEP": "1. SCHRITT",
 	"Log in to your account. If you don't have an account yet, you will be asked to create one. create one.": "Melde dich in deinem Konto an. Wenn du noch kein Konto hast, wirst du aufgefordert, eins zu erstellen.",
 	"Email": "E-Mail",
+	"No account found with this email. Please": "Kein Konto mit dieser E-Mail gefunden. Bitte",
+	"register": "registrieren",
+	"first.": "sie sich zuerst",
 	"Enter your new password": "Gib dein neues Passwort ein",
 	"Back": "Zurück",
 	"Enter password": "Passwort eingeben",
 	"Log in to your account with your e-mail address:": "Melde dich mit deiner E-Mail-Adresse in deinem Konto an:",
+	"The password is incorrect please try another one or": "Das Passwort ist falsch, bitte versuchen Sie ein anderes oder, setzen Sie es ",
+	"reset": "hier",
+	"it.": "zurück",
 	"(Note upper and lower case)": "(Beachte Groß- und Kleinschreibung)",
 	"Log in": "Anmelden",
 	"Forgotten your password? Reset your password here": "Passwort vergessen? Setze dein Passwort hier zurück",
