--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -84,6 +84,7 @@
 	"LOGIN": "LOGIN",
 	"Enjoy brand new originals, blockbusters, addictive series and much more more in streaming": "Enjoy brand new originals, blockbusters, addictive series and much more more in streaming",
 	"To fully explore the variety of Videoflix or to start again, please enter your e-mail address.": "To fully explore the variety of Videoflix or to start again, please enter your e-mail address.",
+	"Your Email is already registered. Please use": "Your Email is already registered. Please use",
 	"Register now": "Register now",
 	"Guest Login": "Guest Login",
 	"Seize this great opportunity today and secure our exclusive free offer now. exclusive free offer now.": "Seize this great opportunity today and secure our exclusive free offer now. exclusive free offer now.",
@@ -139,10 +140,16 @@
 	"1. STEP": "1. STEP",
 	"Log in to your account. If you don't have an account yet, you will be asked to create one. create one.": "Log in to your account. If you don't have an account yet, you will be asked to create one. create one.",
 	"Email": "Email",
+	"No account found with this email. Please": "No account found with this email. Please",
+	"register": "register",
+	"first.": "first",
 	"Enter your new password": "Enter your new password",
 	"Back": "Back",
 	"Enter password": "Enter password",
 	"Log in to your account with your e-mail address:": "Log in to your account with your e-mail address:",
+	"The password is incorrect please try another one or": "The password is incorrect please try another one or",
+	"reset": "reset",
+	"it.": "it.",
 	"(Note upper and lower case)": "(Note upper and lower case)",
 	"Log in": "Log in",
 	"Forgotten your password? Reset your password here": "Forgotten your password? Reset your password here",
