--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -56,22 +56,28 @@
 	"Knowledge": "Wissen",
 	"Other": "Sonstige",
 	"No age rating": "Keine Altersfreigabe",
+	"Automatic image generation": "Automatische Bilderzeugung",
+	"Automatic cover generation": "Automatische Erstellung von Thumnails",
+	"Automatic background generation": "Automatische Hintergrundbilderstellung",
 	"Video / Files": "Video / Dateien",
 	"(Please fill in all fields above first)": "(Bitte fülle zuerst alle oben stehenden Felder aus)",
 	"Cover": "Cover",
 	"Video": "Video",
 	"Upload visible to all?": "Für alle sichtbar hochladen?",
 	"Publish": "Veröffentlichen",
-	"Please wait until the upload is finished": "Bitte warte, bis der Upload abgeschlossen ist",
+	"Status": "Status",
+	"Please wait until the upload is finished or fill in the required fields.": "Bitte warten Sie, bis der Upload abgeschlossen ist oder füllen Sie die erforderlichen Felder aus.",
 	"Genre": "Genre",
 	"Save change": "Änderungen speichern",
 	"back": "Zurück",
 	"My Uploads": "Meine Uploads",
 	"Created at": "Erstellt am",
+	"Conversion Done": "Konvertierung abgeschlossen",
+	"Conversion in progress": "Umwandlung in Gang",
 	"Edit": "Bearbeiten",
 	"Delete file": "Datei löschen",
-	"Would you like to delete": "Möchtest du löschen",
-	"?": "?",
+	"Would you like to": "Wollen Sie das Video ",
+	"delete ?": "Löschen?",
 	"Please take a moment to review our": "Bitte nehmen Sie sich einen Moment Zeit, um unsere",
 	"privacy policy": "Datenschutzbestimmungen",
 	"before proceeding. Thank you!": "bevor Sie fortfahren. Ich danke Ihnen!",
@@ -84,8 +90,8 @@
 	"LOGIN": "ANMELDEN",
 	"Enjoy brand new originals, blockbusters, addictive series and much more more in streaming": "Genieße brandneue Originale, Blockbuster, süchtig machende Serien und vieles mehr im Streaming",
 	"To fully explore the variety of Videoflix or to start again, please enter your e-mail address.": "Um die Vielfalt von Videoflix vollständig zu erkunden oder neu zu starten, gib bitte deine E-Mail-Adresse ein.",
-	"Your Email is already registered. Please use": "Ihre E-Mail ist bereits registriert. Bitte verwenden Sie diese",
 	"Register now": "Jetzt registrieren",
+	"Your Email is already registered. Please use login": "Ihre E-Mail ist bereits registriert. Bitte Login verwenden",
 	"Guest Login": "Gast-Anmeldung",
 	"Seize this great opportunity today and secure our exclusive free offer now. exclusive free offer now.": "Nutze heute diese großartige Gelegenheit und sichere dir unser exklusives kostenloses Angebot jetzt.",
 	"What does VideoFlix offer you?": "Was bietet dir VideoFlix?",
@@ -111,8 +117,6 @@
 	"Family-friendly content thanks to easy-to-use parental controls.": "Familienfreundliche Inhalte dank leicht bedienbarer elterlicher Kontrollen.",
 	"My watchlist": "Meine Merkliste",
 	"Author:": "Autor:",
-	"Convert running": "Laufend umwandeln",
-	"At the moment the conversion of the video is still running in the background. Please be patient and check back later": "Im Moment läuft die Konvertierung des Videos noch im Hintergrund. Bitte haben Sie Geduld und schauen Sie später wieder vorbei.",
 	"Search movie": "Film suchen",
 	"Please enter the desired title above.": "Umwandlung noch im Gange",
 	"Nothing found.": "Nichts gefunden.",
@@ -140,9 +144,7 @@
 	"1. STEP": "1. SCHRITT",
 	"Log in to your account. If you don't have an account yet, you will be asked to create one. create one.": "Melde dich in deinem Konto an. Wenn du noch kein Konto hast, wirst du aufgefordert, eins zu erstellen.",
 	"Email": "E-Mail",
-	"No account found with this email. Please": "Kein Konto mit dieser E-Mail gefunden. Bitte",
-	"register": "registrieren",
-	"first.": "sie sich zuerst",
+	"No account found with this email. Please register first.": "Kein Konto mit dieser E-Mail gefunden. Bitte registrieren Sie sich zuerst.",
 	"Enter your new password": "Gib dein neues Passwort ein",
 	"Back": "Zurück",
 	"Enter password": "Passwort eingeben",
