--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -56,22 +56,28 @@
 	"Knowledge": "Knowledge",
 	"Other": "Other",
 	"No age rating": "No age rating",
+	"Automatic image generation": "Automatic background generation",
+	"Automatic cover generation": "Automatic cover generation",
+	"Automatic background generation": "Automatic backgroundimage generation",
 	"Video / Files": "Video / Files",
 	"(Please fill in all fields above first)": "(Please fill in all fields above first)",
 	"Cover": "Cover",
 	"Video": "Video",
 	"Upload visible to all?": "Upload visible to all?",
 	"Publish": "Publish",
-	"Please wait until the upload is finished": "Please wait until the upload is finished",
+	"Status": "Status",
+	"Please wait until the upload is finished or fill in the required fields.": "Please wait until the upload is finished or fill in the required fields.",
 	"Genre": "Genre",
 	"Save change": "Save change",
 	"back": "back",
 	"My Uploads": "My Uploads",
 	"Created at": "Created at",
+	"Conversion Done": "Conversion Done",
+	"Conversion in progress": "Conversion in progress",
 	"Edit": "Edit",
 	"Delete file": "Delete file",
-	"Would you like to delete": "Would you like to delete",
-	"?": "?",
+	"Would you like to": "Would you like to",
+	"delete ?": "delete?",
 	"Please take a moment to review our": "Please take a moment to review our",
 	"privacy policy": "privacy policy",
 	"before proceeding. Thank you!": "before proceeding. Thank you!",
@@ -84,8 +90,8 @@
 	"LOGIN": "LOGIN",
 	"Enjoy brand new originals, blockbusters, addictive series and much more more in streaming": "Enjoy brand new originals, blockbusters, addictive series and much more more in streaming",
 	"To fully explore the variety of Videoflix or to start again, please enter your e-mail address.": "To fully explore the variety of Videoflix or to start again, please enter your e-mail address.",
-	"Your Email is already registered. Please use": "Your Email is already registered. Please use",
 	"Register now": "Register now",
+	"Your Email is already registered. Please use login": "Your Email is already registered. Please use login",
 	"Guest Login": "Guest Login",
 	"Seize this great opportunity today and secure our exclusive free offer now. exclusive free offer now.": "Seize this great opportunity today and secure our exclusive free offer now. exclusive free offer now.",
 	"What does VideoFlix offer you?": "What does VideoFlix offer you?",
@@ -111,8 +117,6 @@
 	"Family-friendly content thanks to easy-to-use parental controls.": "Family-friendly content thanks to easy-to-use parental controls.",
 	"My watchlist": "My watchlist",
 	"Author:": "Author:",
-	"Convert running": "Convert running",
-	"At the moment the conversion of the video is still running in the background. Please be patient and check back later": "At the moment the conversion of the video is still running in the background. Please be patient and check back later",
 	"Search movie": "Search movie",
 	"Please enter the desired title above.": "Please enter the desired title above.",
 	"Nothing found.": "Nothing found.",
@@ -140,9 +144,7 @@
 	"1. STEP": "1. STEP",
 	"Log in to your account. If you don't have an account yet, you will be asked to create one. create one.": "Log in to your account. If you don't have an account yet, you will be asked to create one. create one.",
 	"Email": "Email",
-	"No account found with this email. Please": "No account found with this email. Please",
-	"register": "register",
-	"first.": "first",
+	"No account found with this email. Please register first.": "No account found with this email. Please register first.",
 	"Enter your new password": "Enter your new password",
 	"Back": "Back",
 	"Enter password": "Enter password",
