add email form convert

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -78,6 +78,7 @@
 	"Delete file": "Datei löschen",
 	"Would you like to": "Wollen Sie das Video ",
 	"delete ?": "Löschen?",
+	"You will be notified by email as soon as the conversion is completed.": "Sie werden per E-Mail benachrichtigt, sobald die Umwandlung abgeschlossen ist.",
 	"Please take a moment to review our": "Bitte nehmen Sie sich einen Moment Zeit, um unsere",
 	"privacy policy": "Datenschutzbestimmungen",
 	"before proceeding. Thank you!": "bevor Sie fortfahren. Ich danke Ihnen!",
