--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -78,6 +78,7 @@
 	"Delete file": "Delete file",
 	"Would you like to": "Would you like to",
 	"delete ?": "delete?",
+	"You will be notified by email as soon as the conversion is completed.": "You will be notified by email as soon as the conversion is completed.",
 	"Please take a moment to review our": "Please take a moment to review our",
 	"privacy policy": "privacy policy",
 	"before proceeding. Thank you!": "before proceeding. Thank you!",
