--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -83,7 +83,7 @@
 	"privacy policy": "Datenschutzbestimmungen",
 	"before proceeding. Thank you!": "bevor Sie fortfahren. Ich danke Ihnen!",
 	"My Movies": "Meine Filme",
-	"New movie": "Neuer Film",
+	"New movie": "Neue Filme",
 	"Movie": "Film",
 	"My": "Mein",
 	"New on VideoFlix": "Neu auf VideoFlix",
