--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -85,7 +85,7 @@
 	"My Movies": "Meine Filme",
 	"New movie": "Neue Filme",
 	"Movie": "Film",
-	"My": "Mein",
+	"My": "Meine",
 	"New on VideoFlix": "Neu auf VideoFlix",
 	"Unique films, series and originals that are exclusively available on our platform and stand out from other streaming services. streaming services.": "Einzigartige Filme, Serien und Originale, die exklusiv auf unserer Plattform erhältlich sind und sich von anderen Streaming-Diensten abheben.",
 	"LOGIN": "ANMELDEN",
@@ -121,7 +121,7 @@
 	"Search movie": "Film suchen",
 	"Please enter the desired title above.": "Umwandlung noch im Gange",
 	"Nothing found.": "Nichts gefunden.",
-	"My Movie": "Mein Film",
+	"My Movie": "Meine Filme",
 	"Reset password": "Passwort zurücksetzen",
 	"Enter your e-mail address to continue": "Gib deine E-Mail-Adresse ein, um fortzufahren",
 	"We will send you an e-mail with further instructions. Please also check your spam folder in your e-mail inbox.": "Wir senden dir eine E-Mail mit weiteren Anweisungen. Bitte überprüfe auch deinen Spam-Ordner in deinem E-Mail-Postfach.",
