--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -88,7 +88,7 @@
 	"My": "My",
 	"New on VideoFlix": "New on VideoFlix",
 	"Unique films, series and originals that are exclusively available on our platform and stand out from other streaming services. streaming services.": "Unique films, series and originals that are exclusively available on our platform and stand out from other streaming services. streaming services.",
-	"LOGIN": "LOGIN",
+	"LOGIN": "Sign In",
 	"Enjoy brand new originals, blockbusters, addictive series and much more more in streaming": "Enjoy brand new originals, blockbusters, addictive series and much more more in streaming",
 	"To fully explore the variety of Videoflix or to start again, please enter your e-mail address.": "To fully explore the variety of Videoflix or to start again, please enter your e-mail address.",
 	"Register now": "Register now",
