--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -119,7 +119,7 @@
 	"My watchlist": "Meine Merkliste",
 	"Author:": "Autor:",
 	"Search movie": "Film suchen",
-	"Please enter the desired title above.": "Umwandlung noch im Gange",
+	"Please enter the desired title above.": "Bitte geben Sie oben den gewünschten Titel ein.",
 	"Nothing found.": "Nichts gefunden.",
 	"My Movie": "Meine Filme",
 	"Reset password": "Passwort zurücksetzen",
